# AutoNRF

./: .Efficiency.cpp.swp  .gitignore  AutoNRF  AutoNRFLinkDef.h  CMakeLists.txt  DataReader.cpp  DataReader.h  Efficiency.cpp  Efficiency.h  Flux.cpp  Flux.h  Functions.cpp  Functions.h  Functions_cpp.d  Functions_cpp_ACLiC_dict_rdict.pcm  G__AutoNRF.cpp  G__AutoNRF_rdict.pcm  Gamma.cpp  Gamma.h  Makefile  Output.cpp  Output.h  README.md  input.par  main.cpp  makeInputFile  makeInputFile.cpp  opensourcecode.sh  quantiles.C  root_hist_fit.c
Output/: default.root  result.root  result2.root
include/: DataReader.h  Efficiency.h  Flux.h  Functions.h  Gamma.h  Output.h
src/: DataReader.cpp  Efficiency.cpp  Flux.cpp  Functions.cpp  Gamma.cpp  Output.cpp  main.cpp  makeInputFile.cpp
